--- a/app/src/main/res/drawable/ic_robot_eye.xml
+++ b/app/src/main/res/drawable/ic_robot_eye.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="100dp"
+    android:height="100dp"
+    android:viewportWidth="100"
+    android:viewportHeight="100">
 
-</selector>
+    <path
+        android:strokeColor="@android:color/black"
+        android:strokeWidth="4"
+        android:pathData="M 50,50 m -40,0 a 40,40 0 1,1 80,0 a 40,40 0 1,1 -80,0" />
+
+    <path
+        android:strokeColor="@android:color/black"
+        android:strokeWidth="4"
+        android:pathData="M 50,50 m -20,0 a 20,20 0 1,1 40,0 a 20,20 0 1,1 -40,0" />
+
+</vector>
